--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11.13", features = ["json"] }
 serde_json = "1.0.91"
 thiserror = "1.0.38"
+ethers = "1.0.2"
